[fix]#9127 spacing buttons in create actu

--- a/css/_modules.scss
+++ b/css/_modules.scss
@@ -3020,6 +3020,13 @@ container article form{
 			line-height: 20px;
 		}
 	}
+	.nine.cell{
+		.row:last-of-type{
+			button{
+				margin-bottom: 10px;
+			}
+		}
+	}
 }
 
 
